WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271138
REGRESSION (
271805@main
): [iOS] Updating options in a visible <select> menu can result in hangs
https://bugs.webkit.org/show_bug.cgi?id=271138
Summary
REGRESSION (271805@main): [iOS] Updating options in a visible <select> menu c...
Aditya Keerthi
Reported
2024-03-17 23:25:47 PDT
rdar://124576235
Attachments
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2024-03-18 08:36:48 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26047
EWS
Comment 2
2024-03-19 08:53:49 PDT
Committed
276349@main
(cfd86982fcdf): <
https://commits.webkit.org/276349@main
> Reviewed commits have been landed. Closing PR #26047 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug